<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.apache.nifi</groupId>
        <artifactId>nifi-nar-bundles</artifactId>
        <version>1.26.0</version>
    </parent>

    <groupId>tech.stackable.nifi</groupId>
    <artifactId>nifi-iceberg-bundle</artifactId>
    <version>0.0.4</version>
    <packaging>pom</packaging>

    <properties>
        <iceberg.version>1.8.1</iceberg.version>
        <hive.version>3.1.3</hive.version>
        <hadoop.version>3.4.1</hadoop.version>
        <awssdk-bundle.version>2.24.6</awssdk-bundle.version>
        <cyclonedx.version>2.8.0</cyclonedx.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <java.version>11</java.version>
        <nifi.version>1.26.0</nifi.version>
        <spotbugs-maven-plugin.version>4.8.6.6</spotbugs-maven-plugin.version>
        <spotbugs.version>4.9.0</spotbugs.version>
        <spotless-maven-plugin.version>2.44.2</spotless-maven-plugin.version>
        <cleanthat.version>2.17</cleanthat.version>
        <error-prone.version>2.27.1</error-prone.version>
        <google-java-format.version>1.19.2</google-java-format.version>
        <findsecbugs-plugin.version>1.12.0</findsecbugs-plugin.version>
    </properties>

    <modules>
        <module>nifi-iceberg-services-api</module>
        <module>nifi-iceberg-services-api-nar</module>
        <module>nifi-iceberg-services</module>
        <module>nifi-iceberg-services-nar</module>
        <module>nifi-iceberg-processors</module>
        <module>nifi-iceberg-processors-nar</module>
        <module>nifi-iceberg-common</module>
        <module>nifi-iceberg-test-utils</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.apache.nifi</groupId>
            <artifactId>nifi-mock</artifactId>
            <version>1.26.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.nifi</groupId>
            <artifactId>nifi-kerberos-user-service-api</artifactId>
            <version>${nifi.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.nifi</groupId>
                <artifactId>nifi-nar-maven-plugin</artifactId>
                <version>1.2.0</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless-maven-plugin.version}</version>
                <configuration>
                    <java>
                        <cleanthat>
                            <version>${cleanthat.version}</version>
                        </cleanthat>
                        <removeUnusedImports />
                        <formatAnnotations />
                        <googleJavaFormat>
                            <version>${google-java-format.version}</version>
                        </googleJavaFormat>
                    </java>
                    <markdown>
                        <includes>
                            <include>**/*.md</include>
                        </includes>
                        <flexmark />
                    </markdown>
                    <json>
                        <includes>
                            <include>src/**/*.json</include>
                        </includes>
                        <jackson />
                    </json>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${spotbugs-maven-plugin.version}</version>
                <configuration>
                    <plugins>
                        <plugin>
                            <groupId>com.h3xstream.findsecbugs</groupId>
                            <artifactId>findsecbugs-plugin</artifactId>
                            <version>${findsecbugs-plugin.version}</version>
                        </plugin>
                    </plugins>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs</artifactId>
                        <version>${spotbugs.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.apache.nifi</groupId>
                        <artifactId>nifi-api</artifactId>
                        <version>${nifi.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.apache.nifi</groupId>
                        <artifactId>nifi-utils</artifactId>
                        <version>${nifi.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.cyclonedx</groupId>
                <artifactId>cyclonedx-maven-plugin</artifactId>
                <version>${cyclonedx.version}</version>
                <configuration>
                    <projectType>application</projectType>
                    <schemaVersion>1.5</schemaVersion>
                    <skipNotDeployed>false</skipNotDeployed>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>makeAggregateBom</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-java-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[11,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>nifi-1.26.0</id>
            <activation>
                <property>
                    <name>nifi.version</name>
                    <value>1.26.0</value>
                </property>
            </activation>
            <properties>
                <nifi.version>1.26.0</nifi.version>
                <findsecbugs-plugin.version>1.12.0</findsecbugs-plugin.version>
            </properties>
        </profile>
    </profiles>
</project>
